se agrega pedido

--- a/practica2/templates/cliente/cliente.html.twig
+++ b/practica2/templates/cliente/cliente.html.twig
@@ -39,7 +39,7 @@ const crearProducto = "{{ path('crearProducto') }}";
 			<div style="text-align:center;margin:5%">
 				<h1>Base de datos Clientes</h1>
 			</div>
-	
+
 			<div>
 				<button @click="nuevoCliente(1)" class="btn btn-success">Crear Cliente</button>
 			</div>
@@ -62,7 +62,7 @@ const crearProducto = "{{ path('crearProducto') }}";
 				</thead>
 				<tbody>
 
-					<tr v-if="nuevoC==1" >
+					<tr v-if="nuevoC==1">
 						<td></td>
 
 						<td>
@@ -71,16 +71,18 @@ const crearProducto = "{{ path('crearProducto') }}";
 						<td><input v-model="formClientes.correo" class="form-control" type="email"/>
 						</td>
 						<td>
-					
+
 							<select class="form-select" v-model="formClientes.departamento">
 								<option selected></option>
-								<option v-for="departamento in departamentos"> ${departamento.nombre}</option>
+								<option v-for="departamento in departamentos">
+									${departamento.nombre}</option>
 							</select>
 						</td>
 						<td>
 							<select v-if="formClientes.departamento" class="form-select" v-model="formClientes.municipio">
 								<option selected></option>
-								<option v-if="dane.departamento == formClientes.departamento" v-for="dane in dane"> ${dane.municipio}</option>
+								<option v-if="dane.departamento == formClientes.departamento" v-for="dane in dane">
+									${dane.municipio}</option>
 							</select>
 						</td>
 						<td></td>
@@ -106,30 +108,41 @@ const crearProducto = "{{ path('crearProducto') }}";
 
 						<td>
 							<div v-if="estadoId!=cliente.id">${cliente.departamento}</div>
-							<input v-else-if="estadoId==cliente.id" v-model="cliente.departamento" type="text">
+							<select class="form-select" v-else-if="estadoId==cliente.id" v-model="cliente.departamento" style="width:70% ;">
+								<option selected></option>
+								<option v-for="departamento in departamentos">
+									${departamento.nombre}</option>
+							</select>
+
 						</td>
 
 						<td>
+
 							<div v-if="estadoId!=cliente.id">${cliente.municipio}</div>
-							<input v-else-if="estadoId==cliente.id" v-model="cliente.municipio" type="text">
+							<select class="form-select" v-else-if="estadoId==cliente.id" v-model="cliente.municipio">
+								<option selected></option>
+								<option v-if="dane.departamento == cliente.departamento" v-for="dane in dane">
+									${dane.municipio}</option>
+							</select>
+						
 						</td>
 
 
 						<td>
-							<button @click="Pedido(cliente.id)" type="button" class="btn btn-success">
+							<a  href="/pedido" type="button" class="btn btn-success">
 								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewbox="0 0 16 16">
 									<path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
 								</svg>
-							</button>
+							</a>
 						</td>
 
 						{# <td>
-							<button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modalCrearPedido">
-							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewbox="0 0 16 16">
-							<path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-							</svg>
-							</button>
-						</td> #}
+																			<button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modalCrearPedido">
+																			<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewbox="0 0 16 16">
+																			<path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+																			</svg>
+																			</button>
+																		</td> #}
 
 						<td>
 							<button v-if="estadoId!=cliente.id" type="button" @click="editCliente(1,cliente.id,0)" class="btn btn-warning">Editar</button>
